[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Modern tiles_Free/Characters_free/Adam_run_16x16.png" type="Texture" id=2]
[ext_resource path="res://Modern tiles_Free/Characters_free/Adam_idle_16x16.png" type="Texture" id=3]
[ext_resource path="res://Art/white.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 304, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 352, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 368, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 208, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 272, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 176, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ) ],
"loop": true,
"name": "idle_d",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ) ],
"loop": true,
"name": "idle_l",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ) ],
"loop": true,
"name": "idle_r",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "idle_u",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]

[sub_resource type="CircleShape2D" id=47]
radius = 10.5753

[sub_resource type="CircleShape2D" id=48]
radius = 264.282

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )
speed = 200

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 2, 2 )
frames = SubResource( 17 )
animation = "down"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true
smoothing_speed = 2.0

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 4 )
texture_scale = 50.0
color = Color( 0.447059, 0.447059, 0.447059, 1 )
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_buffer_size = 512
shadow_gradient_length = 10.0
shadow_filter_smooth = 1.0

[node name="TorchPickup" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TorchPickup"]
scale = Vector2( 3.5, 3.5 )
shape = SubResource( 47 )

[node name="SpawnActivator" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
priority = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnActivator"]
shape = SubResource( 48 )

[connection signal="area_entered" from="TorchPickup" to="." method="_entered_torch_collider"]
[connection signal="area_exited" from="TorchPickup" to="." method="_exited_torch_collider"]
[connection signal="area_entered" from="SpawnActivator" to="." method="_entered_spawn_collider"]
[connection signal="area_exited" from="SpawnActivator" to="." method="_exit_spawn_collider"]
